WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206440
[bmalloc] Fix IsoHeapImpl's assertion introduced in
r254708
https://bugs.webkit.org/show_bug.cgi?id=206440
Summary
[bmalloc] Fix IsoHeapImpl's assertion introduced in r254708
Yusuke Suzuki
Reported
2020-01-17 13:33:21 PST
[bmalloc] Fix IsoHeapImpl's assertion introduced in
r254708
Attachments
Patch
(2.23 KB, patch)
2020-01-17 13:34 PST
,
Yusuke Suzuki
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-01-17 13:34:54 PST
Created
attachment 388083
[details]
Patch
Yusuke Suzuki
Comment 2
2020-01-17 13:34:56 PST
<
rdar://problem/58688794
>
Yusuke Suzuki
Comment 3
2020-01-17 13:36:07 PST
***
Bug 206432
has been marked as a duplicate of this bug. ***
Yusuke Suzuki
Comment 4
2020-01-17 13:43:19 PST
Committed
r254764
: <
https://trac.webkit.org/changeset/254764
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug