Cherry-pick r254764. rdar://problem/58920191

[bmalloc] Fix IsoHeapImpl's assertion introduced in r254708
    https://bugs.webkit.org/show_bug.cgi?id=206440
    <rdar://problem/58688794>

    Reviewed by Mark Lam.

    The assertion introduced in r254708 was wrong.
    Fixing it to check the invariant we actually want to ensure.
    This fixes TestWTF crash in Debug build.

    * bmalloc/IsoHeapImplInlines.h:
    (bmalloc::IsoHeapImpl<Config>::takeFirstEligible):

    Canonical link: https://commits.webkit.org/219509@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254764 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.140@safari-609-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@255327 268f45cc-cd09-0410-ab3c-d52691b4dbfc